# LearningRust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fundamentals/control_flow/src/: main.rs
fundamentals/data_types/src/: main.rs
fundamentals/functions/src/: main.rs
fundamentals/practice/Faren_to_Cels/: Cargo.toml
fundamentals/practice/Faren_to_Cels/src/: main.rs
fundamentals/practice/fibonacci/src/: main.rs
fundamentals/practice/twelve_days_of_christmas/src/: main.rs
fundamentals/variables_and_mutability/src/: main.rs
guessing_game/src/: main.rs
ownership/ownership_intro/src/: main.rs
ownership/references_and_borrowing/src/: main.rs
ownership/slice_type/src/: main.rs
