[workspace]
members = [
	"fundamentals/hello_world",
	"fundamentals/hello_cargo",
	"fundamentals/variables_and_mutability",
	"fundamentals/data_types",
	"fundamentals/functions",
	"fundamentals/control_flow",
	"guessing_game",
	"fundamentals/practice/Faren_to_Cels",
	"fundamentals/practice/fibonacci",
	"fundamentals/practice/twelve_days_of_christmas",
]

resolver = "2"
